EN-2 Implemented centralized logging